Improved rbbt_config

--- a/README.rdoc
+++ b/README.rdoc
@@ -6,12 +6,13 @@ for other applications as well, such as MARQ[http://marq.dacya.ucm.es].
 
 == Important Note
 
-Rbbt covers several functionalities, some will work right away, some require
-to install dependencies or download and process data from databases. Since not
+Some unexpected gem dependencies may appear.
+
+Rbbt covers several functionalities, some will work right away, some require to
+install dependencies or download and process data from the internet. Since not
 all users are likely to need all the functionalities, this gems dependencies
 include only the very basic requirements. Dependencies may appear unexpectedly
-when using new parts of the API. In the installation section we try to list
-the complete list of dependencies.
+when using new parts of the API. 
 
 == Functionality
 
@@ -78,9 +79,8 @@ Install the gem normally <tt>gem install rbbt</tt>. The gem includes a configura
 
 === Using rbbt to translate identifiers
 
-1. Do <tt>rbbt_config install organisms</tt> to do deploy the configuration files, this needs to be done just once. 
-2. You will need the Entrez gene_info files which lists identifiers, install it by doing <tt>rbbt_config install entrez</tt> 
-3. Now you may do <tt>rbbt_config update organisms</tt> toprocess all the organisms, or <tt>rbbt_config update organisms --organism sgd</tt> to process only yeast (sgd).
+1. Do <tt>rbbt_config install identifiers</tt> to do deploy the configuration files and download entrez data, this needs to be done just once.
+3. Now you may do <tt>rbbt_config update organisms</tt> toprocess all the organisms, or <tt>rbbt_config update organisms -o sgd</tt> to process only yeast (sgd).
 4. You may now use a script like this to translate gene identifiers from yeast feed from the standard input
   require 'rbbt/sources/organism'
 
@@ -92,14 +92,12 @@ Install the gem normally <tt>gem install rbbt</tt>. The gem includes a configura
 
 First prepare the organisms as you did in the previous section. Next, if you want to use the default NER module:
 
-1. Compile and install CRF++[http://crfpp.sourceforge.net/] <tt>rbbt_config install crf++</tt>.
-2. Install the Biocreative data used to train the model <tt>rbbt_config install biocreative</tt>
-3. Install and update the ner module for that organism <tt>rbbt_config install ner</tt> and <tt> rbbt_config update ner --organism sgd</tt>. You need to have the gems ParseTree and ruby2ruby for this to work. This process can take a long time.
+1. Install the Biocreative data used to train the model and compile the CRF++ plugin, <tt>rbbt_config install rner</tt>. You may need at this point to install ParseTree and ruby2ruby
+2. Build the module for a particular organism <tt>rbbt_config update ner -o sgd</tt>. You need to have the gems ParseTree and ruby2ruby for this to work. This process can take a long time.
 
 Or, if you wan to use Abner or Banner:
 
-1. Download and install the packages <tt>rbbt_config install abner</tt> or <tt>rbbt_config install banner</tt>
-2. Make sure you have the rjb[rjb.rubyforge.org/] gem installed
+1. Download and install the packages <tt>rbbt_config install java_ner</tt> 
 
 You may now, for example, find mentions to genes in articles from a PubMed query using this script
 
@@ -123,7 +121,7 @@ You may now, for example, find mentions to genes in articles from a PubMed query
 
 == More Installation Guidelines 
 
-This is the complete list of gem requirements: <tt>ParseTree ruby2ruby simpleconsole rjb rsruby stemmer rand rake</tt>. Some of these gems to not work with ruby 1.9 at the time, or may be a bit more complicated to install, for that reason *they are not reported as dependencies and are only required when they are about to be used*.
+This is the complete list of gem requirements: <tt>ParseTree ruby2ruby simpleconsole rjb rsruby stemmer rand rake progress-monitor</tt>. Some of these gems to not work with ruby 1.9 at the time, or may be a bit more complicated to install, for that reason *they are not reported as dependencies and are only required when they are about to be used*. Note that some of these gems are in the gemcutter repository, you may need to install the <tt>gemcutter</tt> gem and do <tt>gem tumble</tt>
 
 Some of the API requires to have some data processed using rbbt_config. This command is used to install third party software, download data from the internet, or build models. The command <tt>rbbt_config install all</tt> will install and process everything, this will take a long time, specially building the NER models. So you might want to start with the basic install and include more things as they are needed. 
 
@@ -132,10 +130,9 @@ Some of the API requires to have some data processed using rbbt_config. This com
  
 * Fork the project.
 * Make your feature addition or bug fix.
-* Add tests for it. This is important so I don't break it in a
-  future version unintentionally.
+* Add tests for it. This is important so I don't break it in a future version unintentionally.
 * Commit, do not mess with rakefile, version, or history.
-  (if you want to have your own version, that is fine but bump version in a commit by itself I can ignore when I pull)
+  (if you want to have your own version, that is fine, but bump version in a commit by itself that I can ignore when I pull)
 * Send me a pull request. Bonus points for topic branches.
 
 = Copyright
