--- a/README.rdoc
+++ b/README.rdoc
@@ -57,14 +57,14 @@ Identifiers translation:: Translates gene identifiers between formats.
 
 Organisms in rbbt are identified using a keyword. This is the list of organisms currently supported with their associated keywords:
 
-Candida albicans:: Ca
-Mus musculus:: Mm
-Rattus norvegicus:: Rn
-Saccharomyces cerevisiae:: Sc
-Arabidopsis thaliana:: At
-Caenorhabditis elegans:: Ce
-Homo sapiens:: Hs
-Schizosaccharomyces pombe:: Sc
+Candida albicans:: Cal
+Mus musculus:: Mmu
+Rattus norvegicus:: Rno
+Saccharomyces cerevisiae:: Sce
+Arabidopsis thaliana:: Ata
+Caenorhabditis elegans:: Cel
+Homo sapiens:: Hsa
+Schizosaccharomyces pombe:: Spo
 
 
 === Other
@@ -80,11 +80,11 @@ Install the gem normally <tt>gem install rbbt</tt>. The gem includes a configura
 === Using rbbt to translate identifiers
 
 1. Do <tt>rbbt_config prepare identifiers</tt> to do deploy the configuration files and download entrez data, this needs to be done just once.
-3. Now you may do <tt>rbbt_config install organisms</tt> toprocess all the organisms, or <tt>rbbt_config install organisms -o Sc</tt> to process only yeast (Sc).
+3. Now you may do <tt>rbbt_config install organisms</tt> toprocess all the organisms, or <tt>rbbt_config install organisms -o Sce</tt> to process only yeast (Sce).
 4. You may now use a script like this to translate gene identifiers from yeast feed from the standard input
   require 'rbbt/sources/organism'
 
-  index = Organism.id_index('Sc', :native => 'Entrez Gene Id')
+  index = Organism.id_index('Sce', :native => 'Entrez Gene Id')
 
   STDIN.each_line{|l| puts "#{l.chomp} => #{index[l.chomp]}"}
 
@@ -93,7 +93,7 @@ Install the gem normally <tt>gem install rbbt</tt>. The gem includes a configura
 First prepare the organisms as you did in the previous section. Next, if you want to use the default NER module:
 
 1. Install the Biocreative data used to train the model and compile the CRF++ plugin, <tt>rbbt_config prepare rner</tt>. You may need at this point to install ParseTree and ruby2ruby
-2. Build the module for a particular organism <tt>rbbt_config install ner -o Sc</tt>. You need to have the gems ParseTree and ruby2ruby for this to work. This process can take a long time.
+2. Build the module for a particular organism <tt>rbbt_config install ner -o Sce</tt>. You need to have the gems ParseTree and ruby2ruby for this to work. This process can take a long time.
 
 Or, if you wan to use Abner or Banner:
 
@@ -108,7 +108,7 @@ You may now, for example, find mentions to genes in articles from a PubMed query
     # type = :banner
     type = :rner
 
-    ner = Organism.ner('Sc', type )
+    ner = Organism.ner('Sce', type )
     pmids = PubMed.query(ARGV[0], 500)
 
     PubMed.get_article(pmids).each{|pmid,article|
